feat: allow users to remove a friend
