# src/app/api/friends/decline-request/route.ts
@@ -12,42 +12,39 @@ export const DELETE = async (req: Request) => {
     return NextResponse.json({ error: "unauthorized" }, { status: 401 });
   }
 
-  const { requesterId }: { requesterId: string } = await req.json();
+  const { friendId }: { friendId: string } = await req.json();
 
-  if (!requesterId) {
+  if (!friendId) {
     return NextResponse.json(
-      { error: "requesterId is required" },
+      { error: "friendId is required" },
       { status: 400 }
     );
   }
 
   try {
-    const receiverId = session.user.id;
-
     const friendship = await prisma.friendship.findFirst({
       where: {
-        requesterId,
-        receiverId,
-        status: "PENDING",
+        id: friendId,
       },
     });
 
     if (!friendship) {
       return NextResponse.json(
-        { error: "Friend request not found" },
+        { error: "Friendship not found" },
         { status: 404 }
       );
     }
 
-    await prisma.friendship.delete({
-      where: { id: friendship.id },
-    });
+    await prisma.friendship.delete({ where: { id: friendship.id } });
 
-    return NextResponse.json({ success: true }, { status: 200 });
+    return NextResponse.json(
+      { success: true, message: "Friendship removed or request declined" },
+      { status: 200 }
+    );
   } catch (err) {
     console.error(err);
     return NextResponse.json(
-      { error: "Failed to decline friend request" },
+      { error: "Failed to remove friend or decline request" },
       { status: 500 }
     );
   }
